# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["py_instrument_control_lib"]

[project]
name = "py-instrument-control-lib"
version = "0.1"
description = "Python Instrument Control Lib"
authors = [{ name = "Alexander Braml", email = "braml@fim.uni-passau.de" },
           { name = "Florian Frank", email = "florian.frank@uni-passau.de" }]
dependencies = []
requires-python = ">=3.7"
